--- a/analysis/PFA_initiation_model.qmd
+++ b/analysis/PFA_initiation_model.qmd
@@ -32,6 +32,7 @@ library(ranger)
 # Packages for other things
 library(terra)
 library(ggplot2)
+library(ggpubr)
 library(maps)
 library(tidyterra)
 ```
@@ -55,8 +56,13 @@ The primary focus of this document is to outline the model-building process and 
 source("../R/create_model_dataframe.R")
 sample_pnts <- training_data[!(is.na(training_data$dist_to_road)), 2:length(training_data)]
 sample_pnts$geo <- as.factor(sample_pnts$geo)
+sample_pnts$gradient_sq <- sample_pnts$gradient ^ 2
+sample_pnts$grad_by_pca <- sample_pnts$gradient * sample_pnts$pca_k1_48
 
-head(sample_pnts)
+all_neg <- rbind(nonls_1996, nonls_2007, nonls_2011)
+all_neg$gradient_sq <- all_neg$gradient ^ 2
+all_neg$grad_by_pca <- all_neg$gradient * all_neg$pca_k1_48
+
 ```
 
 ```{r}
@@ -84,6 +90,59 @@ ggplot() +
 
 The data includes 767 landslide initiation points, with equal proportions of landslide points and non-landslide points. The data has obvious spatial distributions and is divided into 3 approximate year groups. Exact dates for the landslide record were not always available, so these should be viewed as groupings rather than divisions.
 
+It is helpful to look at the how the distributions of predictors vary between our landslide points and our non-landslide points. This informs our expectations for which features will be the most important for the model and increases our confidence in the results of feature selection processes.
+
+```{r}
+#| echo: false
+neg_pts <- sample_pnts[(sample_pnts$class == "neg"), ]
+pos_pts <- sample_pnts[(sample_pnts$class == "pos"), ]
+
+p1 <- ggplot(data = training_data) + 
+  geom_density(data = all_neg, aes(x = gradient), color = "darkgray") +
+  geom_density(data = neg_pts, aes(x = gradient), color = "black") + 
+  geom_density(data = pos_pts, aes(x = gradient), color = "red") 
+
+p2 <- ggplot(data = training_data) + 
+  geom_density(data = all_neg, aes(x = mean_curv), color = "darkgray") +
+  geom_density(data = neg_pts, aes(x = mean_curv), color = "black") + 
+  geom_density(data = pos_pts, aes(x = mean_curv), color = "red")
+
+p3 <- ggplot(data = training_data) + 
+  geom_density(data = all_neg, aes(x = pca_k1_48), color = "darkgray") +
+  geom_density(data = neg_pts, aes(x = pca_k1_48), color = "black") + 
+  geom_density(data = pos_pts, aes(x = pca_k1_48), color = "red")
+
+p4 <- ggplot(data = training_data) + 
+  geom_density(data = all_neg, aes(x = age), color = "darkgray") +
+  geom_density(data = neg_pts, aes(x = age), color = "black") + 
+  geom_density(data = pos_pts, aes(x = age), color = "red") + 
+  xlim(0, 300)
+
+p5 <- ggplot(data = training_data) + 
+  geom_density(data = all_neg, aes(x = dist_to_road), color = "darkgray") +
+  geom_density(data = neg_pts, aes(x = dist_to_road), color = "black") + 
+  geom_density(data = pos_pts, aes(x = dist_to_road), color = "red") + 
+  xlim(0, 600)
+
+p6 <- ggplot(data = training_data) + 
+  geom_density(data = all_neg, aes(x = grad_by_pca), color = "darkgray") +
+  geom_density(data = neg_pts, aes(x = grad_by_pca), color = "black") + 
+  geom_density(data = pos_pts, aes(x = grad_by_pca), color = "red")
+
+p7 <- ggplot(data = training_data) + 
+  geom_density(data = all_neg, aes(x = pca_k1_6), color = "darkgray") +
+  geom_density(data = neg_pts, aes(x = pca_k1_6), color = "black") + 
+  geom_density(data = pos_pts, aes(x = pca_k1_6), color = "red")
+
+p8 <- ggplot(data = training_data) + 
+  geom_density(data = all_neg, aes(x = total_accum), color = "darkgray") +
+  geom_density(data = neg_pts, aes(x = total_accum), color = "black") + 
+  geom_density(data = pos_pts, aes(x = total_accum), color = "red") + 
+  xlim(0, 150) 
+
+ggarrange(p1, p2, p7, p3, p4, p5, p6, p8)
+```
+
 ### Feature Selection
 
 Choosing good features is an essential part of the machine learning process. A good model should use features that are correlated to the output class and independent from each other. The other main goal of feature selection is to choose the smallest possible set of features that produces a good model, which both reduces the runtime of training models and the risk of over-fitting. The definition of a "good model" can be difficult to define, but for our purposes, we use the area under the ROC curve (AUC) as a measure of model performance. A higher AUC indicates a better model, so the feature selection processes will try to maximize this value.
@@ -92,7 +151,7 @@ Choosing good features is an essential part of the machine learning process. A g
 #| echo: false
 load("/Users/julialober/Documents/terrainworks/code/sandbox/filter_results.Rdata")
 
-ggplot(results, aes(x = feature, y = c(rank.auc, rank.anova, rank, rank.cmim, rank.mim))) + 
+ggplot(results, aes(x = feature, y = total)) + 
   geom_bar(stat = "identity")
 ```
 
