--- a/analysis/predicting_landslide_initiation.qmd
+++ b/analysis/predicting_landslide_initiation.qmd
@@ -279,16 +279,29 @@ names(bins) <- c("probability")
 binned_prop <- proportions[J(bins$probability), roll = "nearest"]
 ```
 
-That one line of code should have created a new data frame with 100 rows and the nearest row from each of the cumulative sums above. Now, we can create the plots.
+That one line of code should have created a new data frame with 100 rows and the nearest row from each of the cumulative sums above. Now we need the observed landslide data.
+
+```{r}
+pts_prob <- extract(prob_rast, pts_local, xy = TRUE)
+pts_prob <- pts_prob[!is.na(pts_prob$prob.pos), ]
+setorder(pts_prob, cols = "prob.pos") 
+
+total_pts <- length(pts_prob$ID)
+
+pts_cumul <- proportions[J(pts_prob$prob.pos), roll = "nearest"]
+pts_cumul$ls.prop = seq(1, 9) / total_pts
+```
 
 The first plot that we look at shows the cumulative proportions of area, modeled landslides, and observed landslides at each probability mark. Ideally, we would want the modeled landslide curve to match up with the observed landslide curve. Since we are looking at a single basin right now, there is probably not enough information to really evaluate this correlation.
 
 ```{r}
 ggplot(cbind(bins, binned_prop)) + 
-  geom_line(aes(x = probability, prob.prop)) + 
-  geom_point(aes(x = probability, prob.prop)) + 
-  geom_line(aes(x = probability, area.prop)) +
-  geom_point(aes(x = probability, area.prop))
+  geom_line(aes(x = probability, y = prob.prop), color = "red") + 
+  geom_point(aes(x = probability, y = prob.prop), color = "red") + 
+  geom_line(aes(x = probability, y = area.prop), color = "lightblue") +
+  geom_point(aes(x = probability, y = area.prop), color = "lightblue") + 
+  geom_line(data = pts_cumul, aes(x = prob.pos, y = ls.prop)) + 
+  geom_point(data = pts_cumul, aes(x = prob.pos, y = ls.prop))
 ```
 
 The main curve that we want to use to compare models is the success rate curve, or the proportion of the modeled landslides plotted against the proportion of area. Each point along the curve comes from one of the probability bins. One thing that this curve tells us is how specific the model is with the areas that it feels are landslide-prone.
@@ -296,5 +309,7 @@ The main curve that we want to use to compare models is the success rate curve, 
 ```{r}
 ggplot(cbind(bins, binned_prop)) + 
   geom_line(aes(x = area.prop, y = prob.prop)) + 
-  geom_point(aes(x = area.prop, y = prob.prop))
+  geom_point(aes(x = area.prop, y = prob.prop)) + 
+  geom_line(data = pts_cumul, aes(x = area.prop, y = ls.prop)) + 
+  geom_point(data = pts_cumul, aes(x = area.prop, y = ls.prop))
 ```
